tests/paczka1/small_fuzzy/17107557.err
Error in line 1: A271 S910 4,7
Error in line 3: JjOQX A271 93,0
